Stop the caption covering the photo on small screens

--- a/app/assets/stylesheets/partials/_backers.scss
+++ b/app/assets/stylesheets/partials/_backers.scss
@@ -166,18 +166,27 @@ $backer_background: $backer_green;
   }
 
   figcaption {
-    position: absolute;
-    bottom: 0;
     padding-top: 1em;
     padding-bottom: 1em;
-    width: 100%;
     background: rgba(0,0,0,0.2);
 
+    @include at-breakpoint(25em) {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+    }
+
     p {
-      margin: 0 auto;
-      padding-right: 12em;
-      box-sizing: border-box;
       font-size: 1em;
+
+      @include at-breakpoint(25em) {
+        margin: 0 auto;
+      }
+
+      @include at-breakpoint(50em) {
+        padding-right: 12em;
+        box-sizing: border-box;
+      }
     }
   }
 }
